fix zoom on mobile game view

--- a/app/assets/stylesheets/game.scss
+++ b/app/assets/stylesheets/game.scss
@@ -254,8 +254,8 @@
   }
 
   input.answer-input {
-    font-size: 12px;
-    height: 16px;
+    font-size: 16px;
+    height: 22px;
   }
 
   #earnings-top {
